--- a/q7/src/assets/less/main.less
+++ b/q7/src/assets/less/main.less
@@ -1,12 +1,14 @@
 @import './values.less';
 @import './body.less';
 @import './header.less';
-@import './header_menu.less';
 @import './second_menu.less';
 @import './carousel.less';
 @import './goods_menu.less';
 @import './suoyin.less';
 @import './hot_goods.less';
+@import './good_module.less';
 @import './standard.less';
 @import './detail.less';
+@import './sales_net.less';
+@import './child_title.less';
 @import './footer.less';
