--- a/q7/src/assets/less/standard.less
+++ b/q7/src/assets/less/standard.less
@@ -1,7 +1,8 @@
 .standard {
     position: relative;
-    margin-top: 80px;
-    margin-bottom: 20px;
+    padding-bottom: 40px;
+    border-top: 1px solid #EEE;
+    background-color: white;
     &_title {
         font-size: 26px;
         font-family: '黑体';
