--- a/q7/src/assets/less/values.less
+++ b/q7/src/assets/less/values.less
@@ -13,6 +13,7 @@
 @weixin_image_path: url(../imgs/icon/weixin.png);
 @standard_image_path: url(../imgs/icon/standard.jpg);
 @name_icon_image_path: url(../imgs/icon/name_icon.png);
+@sales_net_image_path: url(../imgs/icon/world.png);
 @header_height: 240px;
 @footer_height: 150px;
-@back_width: 980px;
+@back_width: 1160px;
