--- a/q7/src/assets/styles/base.less
+++ b/q7/src/assets/styles/base.less
@@ -1,6 +1,7 @@
 body {
     position: relative;
     margin: 0;
+    background-color: #DDD;
     &::-webkit-scrollbar {
         width: 10px;
         height: 10px;
