--- a/q7/src/assets/less/body.less
+++ b/q7/src/assets/less/body.less
@@ -2,6 +2,9 @@
     position: relative;
     margin: auto;
     width: @back_width;
+    box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.1);
+    background-color: #FAFAFA;
+    padding-bottom: 50px;
 }
 
 .index, .goods, .about {
