--- a/q7/src/assets/less/body.less
+++ b/q7/src/assets/less/body.less
@@ -2,9 +2,10 @@
     position: relative;
     margin: auto;
     width: @back_width;
-    box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.1);
     background-color: #FAFAFA;
     padding-bottom: 50px;
+    overflow: hidden;
 }
 
 .index, .goods, .about {
