--- a/q7/src/assets/less/second_menu.less
+++ b/q7/src/assets/less/second_menu.less
@@ -1,11 +1,14 @@
 .second_menu {
     display: flex;
+    background-color: #FFF;
+    box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.2);
     &_item {
         flex-grow: 1;
         position: relative;
         text-align: center;
         height: 42px;
         color: black;
+        font-size: 20px;
         text-decoration: none;
         line-height: 42px;
         cursor: pointer;
@@ -25,10 +28,10 @@
         }
         &_back {
             position: absolute;
-            top: 0;
+            bottom: 0;
             width: 100%;
-            height: 100%;
-            border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+            height: 1px;
+            background-color: rgba(0, 0, 0, 0.5);
             opacity: 0;
             visibility: hidden;
         }
