增加了一个带有蒙版功能的盒子

--- a/q7/src/assets/less/values.less
+++ b/q7/src/assets/less/values.less
@@ -17,3 +17,10 @@
 @header_height: 240px;
 @footer_height: 150px;
 @back_width: 1160px;
+
+@keyframes moving{
+    0%{left: -120px}
+    20%{left: -120px}
+    60%{left: 350px}
+    100%{left: 350px}
+}
