--- a/q7/src/assets/less/body.less
+++ b/q7/src/assets/less/body.less
@@ -20,3 +20,29 @@
     height: 200px;
     background: @faxin_image_path;
 }
+
+.alunimage {
+    position: absolute;
+    z-index: 10;
+    top: 500px;
+    left: 20px;
+    width: 256px;
+    height: 128px;
+    -webkit-mask-image: url(../imgs/icon/alun.png);
+    &_mask {
+        position: absolute;
+        height: 250px;
+        left: -60px;
+        top: -60px;
+        animation: moving 2s infinite;
+        animation-timing-function: linear;
+        div {
+            display: inline-block;
+            transform:rotate(45deg);
+            margin-left: 10px;
+            width: 80px;
+            height: 100%;
+            background: linear-gradient(to right, transparent 0%, rgba(255, 255, 255, 0.7) 50%, transparent 100%);
+        }
+    }
+}
